Bug 559432 - Don't fail the assert if the cached actor is null... that probably just means we're in the process of tearing down the instance, r=josh